#0005 feat: swagger commands

--- a/Dogs.Backend/src/Api/Dogs.Api/Dogs.Api.csproj
+++ b/Dogs.Backend/src/Api/Dogs.Api/Dogs.Api.csproj
@@ -14,4 +14,8 @@
     <Folder Include="Controllers\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Application\Dogs.Application\Dogs.Application.csproj" />
+  </ItemGroup>
+
 </Project>
